	- Added messages for costs when using ./town spawn'.
	- The 'New Day' message no longer mentions taxes if you are not set to take taxes.
v0.71.4:
	- Fixed towny admin commands to only work for admins or from the console.
	- Setting ally and outsider permissions at the resident level now correctly displays friend instead of resident.
	- Fixed an error when removing assistants from both town and nation.
	- Fixed Nation ally permissions to correctly test if you have perms for the area you want to perform the action in.
	- Added Bonemeal, redstone repeaters, noteblock and jukebox to protected items to prevent outsider griefing.
	- Moved chat prefix [Towny] to the language file (english.yml).
	- All chat colouring is now configurable within the language file.
	- disabled /tw wildperm, usedefault and wildignore if using permissions. Add permission nodes for these.
	- Added a fix to prevent players firing from the wild into a PVP disabled town to attack.
	- Added '/town set fire [on/off]' to prevent fire damage/spread in a town.
	- Fixed an error where a town/nation data file may not be moved if a previous town/nation of the same name had been deleted/renamed prior.
V0.71.4 RC2:
    - Added to Wildzone ignore ID's - Wood, flowers, tall grass, leaves, cacti, pumpkins, sugarcane, mushrooms, saplings.
    - Added code to reset world wildzone ignore ID's to default at first run.
    - Fixed typo on Firespread message in language file.
    - Added 'wartime_nation_can_be_neutral' to the config.
      This setting permits you to disable the ability for a nation to remain neutral during a war.
      Toggle in game with '/townyadmin war neutral [on/off]
    - Added fs as an abreviation for forsale when used in '/plot forsale'.
    - Corrected an error when a nation sets neutral status. No message was sent of the cost.
    - Added global messages of what nations are at war.
    - Added better sanity checking on the global neutral settings.