@@ -309,3 +309,4 @@ V0.71.4 RC2:
     - Corrected an error when a nation sets neutral status. No message was sent of the cost.
     - Added global messages of what nations are at war.
     - Added better sanity checking on the global neutral settings.
+    - Towny should no longer erase resident/town data on exit if there was a loading problem.
